[package]
name = "vtid-proc"
version = "0.1.1"
edition = "2021"
description = "Procedural macro implementation for vtid - volatile type ID generation"
authors = ["Zakarum <zaq.dev@icloud.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zakarumych/vtid"
keywords = ["proc-macro", "type-id"]
categories = ["development-tools", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
lazy_static = "1.0"
fs2 = "0.4"
